--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="리엑트로 제작하였고 축구 리그 중에 가장 높은 유럽 5대 리그의 여러 정보를 담고 있는 웹사이트입니다."
+      content="리엑트로 제작하였고 축구 리그 중 유럽 5대 리그(프리미어리그, 세리에A, 라리가, 분데스리가, 리그앙1)의 여러 정보를 담고 있는 웹사이트입니다."
     />
     <meta name="keywords" content="React, Web, JavaScript, Frontend, Front-end,zustand,website,github" />
     <meta name="author" content="강성훈" />
     <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="축구: 세계 5대 리그" />
+
+    <meta property="og:title" content="축구: 유럽 5대 리그" />
     <meta property="og:description" content="이 웹사이트는 리액트로 제작되었습니다!" />
-    <meta property="og:image" content="" />
-    <meta property="og:url" content="" />
+    <meta property="og:image" content="/football.svg" />
+    <meta property="og:url" content="https://kang-s-h.github.io/footballSite/" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="SoccerWebsite" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="icon" type="image/svg+xml" href="/football.svg" />
     <title>football</title>
   </head>
